# disaster-tweets-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  infer.py  pyproject.toml
.dvc/: config
artifacts/: checkpoints.dvc
configs/: config.yaml
configs/data/: default.yaml
configs/infer/: default.yaml
configs/logging/: mlflow.yaml
configs/model/: deberta_v3_base.yaml
configs/training/: default.yaml
data/: raw.dvc
disaster_tweets_classifier/: __init__.py  commands.py  constants.py
disaster_tweets_classifier/data/: datamodule.py  download.py  preprocessing.py
disaster_tweets_classifier/inference/: export_onnx.py  predict.py
disaster_tweets_classifier/models/: deberta_classifier.py
disaster_tweets_classifier/training/: train.py
disaster_tweets_classifier/utils/: git_utils.py  plotting.py
scripts/: onnx_to_tensorrt.sh  setup_triton_models.sh
tests/: test_datamodule.py  test_preprocessing.py
triton/: client.py
triton/model_repository/disaster_tweets_onnx/: config.pbtxt
