[project]
name = "disaster-tweets-classifier"
version = "0.1.0"
description = "Binary classifier of disaster-related tweets based on DeBERTa V3."
authors = [{ name = "Fanis Khafizov" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
dependencies = [
    # Core DL
    "torch>=2.2,<2.4",
    "pytorch-lightning>=2.4,<2.6",
    "torchmetrics>=1.3,<2.0",
    # NLP
    "transformers>=4.41,<4.45",
    "tokenizers>=0.19,<0.21",
    "sentencepiece>=0.2,<0.3",
    "emoji>=2.11,<3.0",
    # Classical baseline
    "scikit-learn>=1.4,<2.0",
    # Data
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<2.0",
    "pyarrow>=15.0,<18.0",
    # Configs / CLI
    "hydra-core>=1.3,<2.0",
    "omegaconf>=2.3,<3.0",
    "fire>=0.6,<0.8",
    # Data versioning
    "dvc>=3.50,<4.0",
    # Experiment tracking
    "mlflow>=2.13,<3.0",
    # Production
    "onnx>=1.16,<2.0",
    "onnxruntime>=1.18,<2.0",
    # Inference server client
    "tritonclient[http]>=2.45,<3.0",
    "fastapi>=0.111,<0.116",
    "uvicorn>=0.30,<0.33",
    # Utilities
    "matplotlib>=3.8,<4.0",
    "seaborn>=0.13,<0.14",
    "tqdm>=4.66,<5.0",
    "python-dotenv>=1.0,<2.0",
    "gitpython>=3.1,<4.0",
    "setuptools>=70.0",
]

[project.scripts]
dtc = "disaster_tweets_classifier.commands:main"

[dependency-groups]
dev = [
    "pre-commit>=3.7,<5.0",
    "ruff>=0.5,<0.8",
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["disaster_tweets_classifier"]

# === Ruff configuration ===
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "artifacts", "mlruns", "outputs", "multirun", ".dvc"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "C4",       # comprehensions
    "SIM",      # simplify
    "RUF",      # ruff-specific
]
ignore = [
    "E501",   # handled by formatter
    "B008",   # function call in default arg (common in Hydra/FastAPI)
]

[tool.ruff.lint.isort]
known-first-party = ["disaster_tweets_classifier"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# === Pytest ===
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q"
